Updated the mcafee configurations to better support EPO events

--- a/configfiles/9032_output_mcafee.conf
+++ b/configfiles/9032_output_mcafee.conf
@@ -1,19 +1,20 @@
 # Author: Justin Henderson
-#         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
-# Email: justin@hasecuritysolution.com
-# Last Update: 12/9/2016
-
-filter {
-  if [type] == "mcafee" and "test_data" not in [tags] {
-    mutate {
-	  ##add_tag => [ "conf_file_9032"]
-	}
-  }
-}
+# Email: jhenderson@tekrefresh.com
+# Last Update: 8/26/2016
+#
+# This file looks for McAfee EPO logs
 output {
-  if [type] == "mcafee" and "test_data" not in [tags] {
-    #stdout { codec => rubydebug }
-    elasticsearch {
+  if [type] == "mcafee-event" and "test_data" not in [tags] {
+    mutate {
+	  add_tag => [ "conf_file_9032"]
+	},    
+	elasticsearch {
+      document_id => "%{id}"
+      hosts => [ "clientes01.hdcare.local","clientes02.hdcare.local","clientes03.hdcare.local" ]
+      index => "logstash-mcafee_event-%{+YYYY.MM.dd}"
     }
   }
+  if [type] == "mcafee-event" and "test_data" in [tags] {
+     stdout {codec => json}
+ }
 }
