--- a/configfiles/0008_input_mcafee.conf
+++ b/configfiles/0008_input_mcafee.conf
@@ -1,34 +1,43 @@
-# Author: Justin Henderson
+# author: Justin Henderson
 # SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolution.com
-# Last Update: 7/11/2017
+# Last Update: 8/26/2017
+# JDBC input that is designed to pull the McAfee Events data from the EPO server.
 
 # README
 # To use this configuration you need to uncomment everything in the input section and
 # update the mcafee_db_server_name_goes_here, mcafee_database_name_goes_here,
-# sql_service_username_goes_here, and sql_service_password_goes_here
+# sql_service_username_goes_here, and sql_service_password_goes_here, full_path_and_filename_of_sql_file
 
 input {
-  #jdbc {
-  #   clean_run => true
-  #   record_last_run => false
-  #   jdbc_driver_library => "/etc/logstash/drivers/sqljdbc42.jar"
-  #   jdbc_driver_class => "com.microsoft.sqlserver.jdbc.SQLServerDriver"
-  #   jdbc_connection_string => "jdbc:sqlserver://mcafee_db_server_name_goes_here:1433;databasename=mcafee_database_name_goes_here"
-  #   jdbc_fetch_size => "10000"
-  #   jdbc_user => "sql_service_username_goes_here"
-  #   jdbc_password => "sql_service_password_goes_here"
-  #   schedule => "* * * * *"
-  #   statement => "SELECT AutoID AS id,AutoGUID,ServerID,ReceivedUTC,DetectedUTC,AgentGUID,Analyzer,AnalyzerName,AnalyzerVersion,AnalyzerHostName,convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[AnalyzerIPV4] + 2147483648))),1,1)))+'.'+convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[AnalyzerIPV4] + 2147483648))),2,1)))+'.'+convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[AnalyzerIPV4] + 2147483648))),3,1)))+'.'+convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[AnalyzerIPV4] + 2147483648))),4,1))) AS AnalyzerIPV4,AnalyzerIPV6,AnalyzerMAC,AnalyzerDATVersion,AnalyzerEngineVersion,AnalyzerDetectionMethod,SourceHostName,convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[SourceIPV4] + 2147483648))),1,1)))+'.'+convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[SourceIPV4] + 2147483648))),2,1)))+'.'+convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[SourceIPV4] + 2147483648))),3,1)))+'.'+convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[SourceIPV4] + 2147483648))),4,1))) AS SrcIP,SourceIPV6,SourceMAC,SourceUserName,SourceProcessName,SourceURL,TargetHostName,convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[TargetIPV4] + 2147483648))),1,1)))+'.'+convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[TargetIPV4] + 2147483648))),2,1)))+'.'+convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[TargetIPV4] + 2147483648))),3,1)))+'.'+convert(varchar(3),convert(tinyint,substring(convert(varbinary(4),convert(bigint,([EPOEvents].[TargetIPV4] + 2147483648))),4,1))) AS DstIP,TargetIPV6,TargetMAC,TargetUserName,TargetPort,TargetProtocol,TargetProcessName,TargetFileName,ThreatCategory,ThreatEventID,ThreatSeverity,ThreatName,ThreatType,ThreatActionTaken,ThreatHandled,TheTimestamp,TenantId FROM EPOEvents"
-  #   tracking_column => id
-  #   type => "mcafee"
-  #}
+  jdbc {
+     clean_run => true
+     record_last_run => false
+     jdbc_driver_library => "/etc/logstash/drivers/sqljdbc42.jar"
+     jdbc_driver_class => "com.microsoft.sqlserver.jdbc.SQLServerDriver"
+     jdbc_connection_string => "jdbc:sqlserver://mcafee_db_server_name_goes_here:1433;databasename=mcafee_database_name_goes_here"
+     sql_log_level => 'warn'
+
+     # tracking_column built-in parameter to help logstash only query records created since the last query 
+     use_column_value => true
+     tracking_column => 'id'
+     jdbc_fetch_size => "1000"
+     jdbc_user => "sql_service_username_goes_here"
+     jdbc_password => "sql_service_password_goes_here"
+     schedule => "* * * * *"
+
+     # Rather than trying to manage a long SQL Query, use a query stored in a SQL file.
+     #   It is much easier to read and to manage. But it does mean that the SQL file must be
+     #   accessible and available.
+     statement_filepath => "full_path_and_filename_of_sql_file"
+     type => "mcafee-event"
+  }
 }
 
 filter {
-  if [type] == "mcafee" {
+ if [type] == "mcafee-event" {
     mutate {
-		  #add_tag => [ "conf_file_0008"]
-	  }
+                  add_tag => [ "conf_file_0008"]
+          }
   }
 }
