--- a/configfiles/8200_postprocess_tagging.conf
+++ b/configfiles/8200_postprocess_tagging.conf
@@ -10,7 +10,7 @@ filter {
     }
   }
   if [destination_ip] and "multicast" not in [tags] and "broadcast" not in [tags] {
-    if [destination_ip] =~ "10\." or [destination_ip] =~ "192\.168\." or [destination_ip] =~ "172\.(1[6-9]|2[0-9]|3[0-1])\." {
+    if [destination_ip] =~ "^10\." or [destination_ip] =~ "192\.168\." or [destination_ip] =~ "172\.(1[6-9]|2[0-9]|3[0-1])\." {
       mutate {
         add_tag => [ "internal_destination" ]
       }
@@ -28,7 +28,7 @@ filter {
     }
   }
   if [source_ip] {
-    if [source_ip] =~ "10\." or [source_ip] =~ "192\.168\." or [source_ip] =~ "172\.(1[6-9]|2[0-9]|3[0-1])\." {
+    if [source_ip] =~ "^10\." or [source_ip] =~ "192\.168\." or [source_ip] =~ "172\.(1[6-9]|2[0-9]|3[0-1])\." {
       mutate {
         add_tag => [ "internal_source" ]
       }
