--- a/configfiles-OPTIONAL/1000_preprocess_log_elapsed.conf
+++ b/configfiles-OPTIONAL/1000_preprocess_log_elapsed.conf
@@ -1,13 +1,12 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 10/10/2017
+#
+# Requires Logstash version 5.x
 
 filter {
   ruby {
-    code => "event['task_start'] = Time.now.to_f;"
-  }
-  mutate {
-    #add_tag => [ "conf_file_1000"]
+    code => "event.set('task_start',Time.now.to_f)"
   }
 }
