--- a/configfiles-OPTIONAL/8998_postprocess_log_elapsed.conf
+++ b/configfiles-OPTIONAL/8998_postprocess_log_elapsed.conf
@@ -1,19 +1,18 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 10/10/2017
+#
+# Requires Logstash version 5.X
 
 filter {
   ruby {
-    code => "event['task_end'] = Time.now.to_f;"
+    code => "event.set('task_end',Time.now.to_f)"
   }
   ruby {
-    code => "event['logstash_time'] = event['task_end'] - event['task_start']"
+    code => "event.set('logstash_time',(event.get('task_end') - event.get('task_start')).round(8))"
   }
   mutate {
     remove_field => [ 'task_start', 'task_end' ]
-  }
-  mutate {
-	#add_tag => [ "conf_file_8998"]
   }
 }
