--- a/configfiles/1006_preprocess_beats.conf
+++ b/configfiles/1006_preprocess_beats.conf
@@ -1,12 +1,22 @@
 filter {
-    if [source] =~ "^\/nsm\/bro" {
-        grok {
-            match => { "source" => "\/%{WORD:file_name}\.log$" }
-        }
-        mutate {
-            replace => { "type" => "bro_%{file_name}" }
-            remove_field => "file_name"
-            add_tag => "bro"
-        }
+  if [source] =~ "^\/nsm\/bro" {
+    grok {
+      match => { "source" => "\/%{WORD:file_name}\.log$" }
     }
+    mutate {
+      add_field => { "event_type" => "bro_%{file_name}" }
+      remove_field => "file_name"
+      add_tag => "bro"
+    }
+  }
+  if [source] =~ ".eve.json$" {
+    json {
+      source => "message"
+      remove_field => "message"
+      add_tag => "suricata"
+    }
+  }
+  mutate {
+    replace => { "type" => "doc" }
+  }
 }
