--- a/configfiles/0005_input_suricata.conf
+++ b/configfiles/0005_input_suricata.conf
@@ -1,19 +1,12 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 11/15/2017
 
 input {
   tcp {
     port => 6053
     codec => json
-    type => "suricata"
-  }
-}
-filter {
-  if [type] == "suricata" {
-    mutate {
-		#add_tag => [ "conf_file_0005"]
-	}
+    tags => "suricata"
   }
 }
