--- a/configfiles/1006_preprocess_beats.conf
+++ b/configfiles/1006_preprocess_beats.conf
@@ -8,6 +8,11 @@ filter {
       remove_field => "file_name"
       add_tag => "bro"
     }
+    if [event_type] =~ "^bro_http" {
+      mutate {
+        replace => { "event_type" => "bro_http"}
+      }
+    }
   }
   if [source] =~ ".eve.json$" {
     json {
