--- a/configfiles/1123_preprocess_bro_x509.conf
+++ b/configfiles/1123_preprocess_bro_x509.conf
@@ -1,12 +1,12 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 11/16/2017
 #
 # This conf file is based on accepting logs for x509.log from Bro systems
 
 filter {
-  if [type] == "bro_x509" {
+  if [event_type] == "bro_x509" {
     grok {
       match => [ "message", "(?<timestamp>(.*?))\t(?<id>(.*?))\t(?<certificate_version>(.*?))\t(?<certificate_serial>(.*?))\t(?<certificate_subject>(.*?))\t(?<certificate_issuer>(.*?))\t(?<certificate_not_valid_before>(.*?))\t(?<certificate_not_valid_after>(.*?))\t(?<certificate_key_algorithm>(.*?))\t(?<certificate_signing_algorithm>(.*))\t(?<certificate_key_type>(.*))\t(?<certificate_key_length>(.*))\t(?<certificate_exponent>(.*))\t(?<certificate_curve>(.*))\t(?<san_dns>(.*))\t(?<san_uri>(.*))\t(?<san_email>(.*))\t(?<san_ip>(.*))\t(?<basic_constraints_ca>(.*))\t(?<basic_constraints_path_length>(.*))" ]
     }
@@ -85,12 +85,12 @@ filter {
     }
     if [certificate_common_name] {
       ruby {
-        code => "event['certificate_common_name_length'] = event['certificate_common_name'].length;"
+        code => "event.set('certificate_common_name_length', event.get('certificate_common_name').length)"
       }
     }
     if [issuer_common_name] {
       ruby {
-        code => "event['issuer_common_name_length'] = event['issuer_common_name'].length;"
+        code => "event.set('issuer_common_name_length', event.get('issuer_common_name').length)"
       }
     }
     if [certificate_not_valid_after] == "-" {
@@ -105,7 +105,7 @@ filter {
     }
     if [certificate_not_valid_after] and [certificate_not_valid_before] {
       ruby {
-        code => "event['certificate_number_days_valid'] = ((event['certificate_not_valid_after'] - event['certificate_not_valid_before']) / 86400).ceil;"
+        code => "event.set('certificate_number_days_valid', ((event.get('certificate_not_valid_after') - event.get('certificate_not_valid_before')) / 86400).ceil)"
       }
       date {
         match => [ "certificate_not_valid_after", "UNIX" ]
