--- a/configfiles/6400_suricata.conf
+++ b/configfiles/6400_suricata.conf
@@ -1,10 +1,10 @@
 # Author: Justin Henderson
 # Email: jhenderson@tekrefresh.comes
-# Last Update: 4/29/2017
+# Last Update: 11/16/2017
 #
 # This conf file is based on accepting logs for suricata json events
 filter {
-  if [type] == "suricata" {
+  if "suricata" in [tags] {
     if "test_data" not in [tags] {
       date {
         match => [ "timestamp", "ISO8601" ]
@@ -81,38 +81,39 @@ filter {
       }
       # OPTIONAL - LOOKUP DNS INFORMATION ON CERTAIN CONNECTIONS
       # Update elasticsearch host info for this to work
-      if [bytes_to_client] > 10000000 {
-        elasticsearch {
-          hosts => ["es_server_goes_here"]
-          index => "logstash-bro-*"
-          query => "type:dns AND answers:%{[destination_ip]}"
-          fields => [["highest_registered_domain","highest_registered_domain"],["parent_domain","parent_domain"],["parent_domain_length","parent_domain_length"],["query","query"],["query_length","query_length"],["sub_domain","sub_domain"]]
-        }
-      }
-      if [bytes_to_server] > 1000000 {
-        elasticsearch {
-          hosts => ["es_server_goes_here"]
-          index => "logstash-bro-*"
-          query => "type:dns AND answers:%{[destination_ip]}"
-          fields => [["highest_registered_domain","highest_registered_domain"],["parent_domain","parent_domain"],["parent_domain_length","parent_domain_length"],["query","query"],["query_length","query_length"],["sub_domain","sub_domain"]]
-        }
-      }
-      if [duration] > 14399 {
-        elasticsearch {
-          hosts => ["es_server_goes_here"]
-          index => "logstash-bro-*"
-          query => "type:dns AND answers:%{[destination_ip]}"
-          fields => [["highest_registered_domain","highest_registered_domain"],["parent_domain","parent_domain"],["parent_domain_length","parent_domain_length"],["query","query"],["query_length","query_length"],["sub_domain","sub_domain"]]
-        }
-      }
-      if [signature] !~ "SCAN" and [signature] !~ "POLICY" and [event_type] == "alert" {
-        elasticsearch {
-          hosts => ["es_server_goes_here"]
-          index => "logstash-bro-*"
-          query => "type:dns AND answers:%{[destination_ip]}"
-          fields => [["highest_registered_domain","highest_registered_domain"],["parent_domain","parent_domain"],["parent_domain_length","parent_domain_length"],["query","query"],["query_length","query_length"],["sub_domain","sub_domain"]]
-        }
-      }
+      # Requires logstash-filter-elasticsearch plugin
+      #if [bytes_to_client] > 10000000 {
+      #  elasticsearch {
+      #    hosts => ["es_server_goes_here"]
+      #    index => "logstash-bro-*"
+      #    query => "event_type:dns AND answers:%{[destination_ip]}"
+      #    fields => [["highest_registered_domain","highest_registered_domain"],["parent_domain","parent_domain"],["parent_domain_length","parent_domain_length"],["query","query"],["query_length","query_length"],["sub_domain","sub_domain"]]
+      #  }
+      #}
+      #if [bytes_to_server] > 1000000 {
+      #  elasticsearch {
+      #    hosts => ["es_server_goes_here"]
+      #    index => "logstash-bro-*"
+      #    query => "type:dns AND answers:%{[destination_ip]}"
+      #    fields => [["highest_registered_domain","highest_registered_domain"],["parent_domain","parent_domain"],["parent_domain_length","parent_domain_length"],["query","query"],["query_length","query_length"],["sub_domain","sub_domain"]]
+      #  }
+      #}
+      #if [duration] > 14399 {
+      #  elasticsearch {
+      #    hosts => ["es_server_goes_here"]
+      #    index => "logstash-bro-*"
+      #    query => "type:dns AND answers:%{[destination_ip]}"
+      #    fields => [["highest_registered_domain","highest_registered_domain"],["parent_domain","parent_domain"],["parent_domain_length","parent_domain_length"],["query","query"],["query_length","query_length"],["sub_domain","sub_domain"]]
+      #  }
+      #}
+      #if [signature] !~ "SCAN" and [signature] !~ "POLICY" and [event_type] == "alert" {
+      #  elasticsearch {
+      #    hosts => ["es_server_goes_here"]
+      #    index => "logstash-bro-*"
+      #    query => "type:dns AND answers:%{[destination_ip]}"
+      #    fields => [["highest_registered_domain","highest_registered_domain"],["parent_domain","parent_domain"],["parent_domain_length","parent_domain_length"],["query","query"],["query_length","query_length"],["sub_domain","sub_domain"]]
+      #  }
+      #}
     }
 	# This will translate the alert.severity field into a severity field of either High, Medium, or Low
     if [event_type] == "alert" {
@@ -186,7 +187,7 @@ filter {
       }
     }
   }
-  if [type] == "suricata" {
+  if "suricata" in [tags] {
     if "_grokparsefailure" not in [tags] and "_csvparsefailure" not in [tags] and "_jsonparsefailure" not in [tags] {
     #  mutate {
     #    remove_field => [ "message" ]
