--- a/configfiles/0006_input_beats.conf
+++ b/configfiles/0006_input_beats.conf
@@ -1,5 +1,10 @@
+# Author: Justin Henderson
+#         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
+# Email: justin@hasecuritysolutions.com
+# Last Update: 11/15/2017
+
 input {
-    beats {
-        port => "5044"
-    }
+  beats {
+    port => "5044"
+  }
 }
