--- a/configfiles/1103_preprocess_bro_dpd.conf
+++ b/configfiles/1103_preprocess_bro_dpd.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 11/16/2017
 #
 # This conf file is based on accepting logs for dpd.log from Bro systems
 filter {
-  if [type] == "bro_dpd" {
+  if [event_type] == "bro_dpd" {
     # This is the initial parsing of the log
     csv {
       columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","protocol","analyzer","failure_reason"]
