--- a/configfiles/1104_preprocess_bro_files.conf
+++ b/configfiles/1104_preprocess_bro_files.conf
@@ -1,14 +1,14 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 11/16/2017
 #
 # This conf file is based on accepting logs for files.log from Bro systems
 filter {
-  if [type] == "bro_files" {
+  if [event_type] == "bro_files" {
     # This is the initial parsing of the log
     csv {
-      columns => ["timestamp","fuid","file_ip","destination_ip","connection_uids","source","depth","analyzer","mimetype","file_name","duration","rig","is_orig","seen_bytes","total_bytes","missing_bytes","overflow_bytes","timed_out","fuid","md5","sha1","sha256","extracted"]
+      columns => ["timestamp","fuid","file_ip","destination_ip","connection_uids","source","depth","analyzer","mime_type","file_name","duration","rig","is_orig","seen_bytes","total_bytes","missing_bytes","overflow_bytes","timed_out","fuid","md5","sha1","sha256","extracted"]
       separator => "	"
     }
 	mutate {
