--- a/configfiles/1108_preprocess_bro_kereberos.conf
+++ b/configfiles/1108_preprocess_bro_kereberos.conf
@@ -1,10 +1,10 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 11/16/2017
 # This conf file is based on accepting logs for kerberos.log from Bro systems
 filter {
-  if [type] == "bro_kerberos" {
+  if [event_type] == "bro_kerberos" {
     csv {
       columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","request_type","client","service","success","error_message","email_from","till","cipher","forwardable","renewable","client_certificate_subject","client_certificate_uid","server_certificate_subject","server_certificate_fuid"]
       separator => "	"
