--- a/configfiles/1115_preprocess_bro_ssh.conf
+++ b/configfiles/1115_preprocess_bro_ssh.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 11/16/2017
 #
 # This conf file is based on accepting logs for ssh.log from Bro systems
 filter {
-  if [type] == "bro_ssh" {
+  if [event_type] == "bro_ssh" {
     # This is the initial parsing of the log
     csv {
       columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","version","authentication_success","direction","client","server","cipher_algorithm","mac_algorithm","compression_algorithm","kex_algorithm","host_key_algorithm","host_key","destination_country_code","destination_region","destination_city","destination_latitude","destination_longitude"]
