--- a/configfiles/1119_preprocess_bro_weird.conf
+++ b/configfiles/1119_preprocess_bro_weird.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 11/16/2017
 #
 # This conf file is based on accepting logs for weird.log from Bro systems
 filter {
-  if [type] == "bro_weird" {
+  if [event_type] == "bro_weird" {
     grok {
       match => [ "message", "(?<timestamp>(.*?))\t(?<uid>(.*?))\t(?<source_ip>(.*?))\t(?<source_port>(.*?))\t(?<destination_ip>(.*?))\t(?<destination_port>(.*?))\t(?<name>(.*?))\t(?<additional_info>(.*?))\t(?<notice>(.*?))\t(?<peer>(.*))" ]
     }
