--- a/configfiles/9006_output_beats.conf
+++ b/configfiles/9006_output_beats.conf
@@ -1,3 +1,8 @@
+# Author: Justin Henderson
+# SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
+# Email: justin@hasecuritysolutions.com
+# Last Update: 11/15/2017
+
 output {
   stdout { codec => rubydebug }
   if [beat] {
