--- a/configfiles/9400_output_suricata.conf
+++ b/configfiles/9400_output_suricata.conf
@@ -1,17 +1,10 @@
 # Author: Justin Henderson
-#         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
+# SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 11/16/2017
 
-filter {
-  if [type] == "suricata" and "test_data" not in [tags] {
-    mutate {
-	  ##add_tag => [ "conf_file_9400"]
-	}
-  }
-}
 output {
-  if [type] == "suricata" and "test_data" not in [tags] {
+  if "suricata" in [tags] and "test_data" not in [tags] {
     #stdout { codec => rubydebug }
     elasticsearch {
       index => "logstash-ids-%{+YYYY.MM.dd}"
