--- a/configfiles/9006_output_beats.conf
+++ b/configfiles/9006_output_beats.conf
@@ -4,8 +4,8 @@
 # Last Update: 11/15/2017
 
 output {
-  stdout { codec => rubydebug }
   if [beat] {
+    #stdout { codec => rubydebug }
     elasticsearch {
       index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}" 
     }
