--- a/configfiles/1101_preprocess_bro_dhcp.conf
+++ b/configfiles/1101_preprocess_bro_dhcp.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 11/16/2017
+# Last Update: 12/9/2016
 #
 # This conf file is based on accepting logs for dhcp.log from Bro systems
 filter {
-  if [event_type] == "bro_dhcp" {
+  if [type] == "bro_dhcp" {
     # This is the initial parsing of the log
     grok {
       match => [ "message", "(?<timestamp>(.*?))\t(?<uid>(.*?))\t(?<source_ip>(.*?))\t(?<source_port>(.*?))\t(?<destination_ip>(.*?))\t(?<destination_port>(.*?))\t(?<mac>(.*?))\t(?<assigned_ip>(.*?))\t(?<lease_time>(.*?))\t(?<transaction_id>(.*))" ]
