--- a/configfiles/1121_preprocess_bro_mysql.conf
+++ b/configfiles/1121_preprocess_bro_mysql.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 11/16/2017
+# Last Update: 12/9/2016
 #
 # This conf file is based on accepting logs for mysql.log from Bro systems
 filter {
-  if [event_type] == "bro_mysql" {
+  if [type] == "bro_mysql" {
     # This is the initial parsing of the log
     grok {
       match => [ "message", "(?<timestamp>(.*?))\t(?<uid>(.*?))\t(?<SourceIP>(.*?))\t(?<SourcePort>(.*?))\t(?<DestinationIP>(.*?))\t(?<DestinationPort>(.*?))\t(?<Command>(.*?))\t(?<Argument>(.*?))\t(?<Success>(.*?))\t(?<RowsResponse>(.*))" ]
