--- a/configfiles/1102_preprocess_bro_dns.conf
+++ b/configfiles/1102_preprocess_bro_dns.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 11/16/2017
+# Last Update: 12/9/2016
 #
 # This conf file is based on accepting logs for dns.log from Bro systems
 filter {
-  if [event_type] == "bro_dns" {
+  if [type] == "bro_dns" {
     # This is the initial parsing of the log
     csv {
       columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","protocol","transaction_id","rtt","query","query_class","query_class_name","query_type","query_type_name","rcode","rcode_name","aa","tc","rd","ra","z","answers","ttls","rejected"]
