--- a/configfiles/1107_preprocess_bro_irc.conf
+++ b/configfiles/1107_preprocess_bro_irc.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 11/16/2017
+# Last Update: 12/9/2016
 #
 # This conf file is based on accepting logs for irc.log from Bro systems
 filter {
-  if [event_type] == "bro_irc" {
+  if [type] == "bro_irc" {
     # This is the initial parsing of the log
     csv {
       columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","nick","username","command","value","additional_info","dcc_file_name","dcc_file_size","dcc_mime_type","fuid"]
