--- a/configfiles/1109_preprocess_bro_notice.conf
+++ b/configfiles/1109_preprocess_bro_notice.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 11/16/2017
+# Last Update: 12/9/2016
 #
 # This conf file is based on accepting logs for notice.log from Bro systems
 filter {
-  if [event_type] == "bro_notice" {
+  if [type] == "bro_notice" {
     # This is the initial parsing of the log
     csv {
       columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","fuid","file_mime_type","file_description","protocol","note","message","sub_message","source_ip","destination_ip","p","n","peer_description","action","suppress_for","dropped","destination_country_code","destination_region","destination_city","destination_latitude","destination_longitude"]
