--- a/configfiles/1110_preprocess_bro_rdp.conf
+++ b/configfiles/1110_preprocess_bro_rdp.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 11/16/2017
+# Last Update: 12/9/2016
 #
 # This conf file is based on accepting logs for weird.log from Bro systems
 filter {
-  if [event_type] == "bro_rdp" {
+  if [type] == "bro_rdp" {
     csv {
       columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","cookie","result","security_protocol","keyboard_layout","client_build","client_name","client_digital_product_id","desktop_width","desktop_height","requested_color_depth","certificate_type","certificate_count","certificate_permanent","encryption_level","encryption_method"]
       separator => "	"
