--- a/configfiles/1111_preprocess_bro_signatures.conf
+++ b/configfiles/1111_preprocess_bro_signatures.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 11/16/2017
+# Last Update: 12/9/2016
 #
 # This conf file is based on accepting logs for signatures.log from Bro systems
 filter {
-  if [event_type] == "bro_signatures" {
+  if [type] == "bro_signatures" {
     # This is the initial parsing of the log
     csv {
       columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","note","signature_id","event_message","sub_message","signature_count","host_count"]
