--- a/configfiles/1113_preprocess_bro_snmp.conf
+++ b/configfiles/1113_preprocess_bro_snmp.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 11/16/2017
+# Last Update: 12/9/2016
 #
 # This conf file is based on accepting logs for snmp.log from Bro systems
 filter {
-  if [event_type] == "bro_snmp" {
+  if [type] == "bro_snmp" {
     # This is the initial parsing of the log
     csv {
       columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","duration","version","community","get_requests","get_bulk_requests","get_responses","set_responses","display_string","up_since"]
