--- a/configfiles/1116_preprocess_bro_ssl.conf
+++ b/configfiles/1116_preprocess_bro_ssl.conf
@@ -1,11 +1,11 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 11/16/2017
+# Last Update: 12/9/2016
 #
 # This conf file is based on accepting logs for ssl.log from Bro systems
 filter {
-  if [event_type] == "bro_ssl" {
+  if [type] == "bro_ssl" {
    # This is the initial parsing of the log
     csv {
       columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","version","cipher","curve","server_name","resumed","last_alert","next_protocol","established","certificate_chain_fuids","client_certificate_chain_fuids","certificate_subject","certificate_issuer","client_subject","client_issuer","validation_status"]
@@ -65,12 +65,12 @@ filter {
     }
     if [certificate_common_name] {
       ruby {
-        code => "event.set('certificate_common_name_length', event.get('certificate_common_name').length)"
+        code => "event['certificate_common_name_length'] = event['certificate_common_name'].length;"
       }
     }
     if [issuer_common_name] {
       ruby {
-        code => "event.set('issuer_common_name_length', event.get('issuer_common_name').length)"
+        code => "event['issuer_common_name_length'] = event['issuer_common_name'].length;"
       }
     }
     if [server_name] == "-" {
@@ -79,7 +79,7 @@ filter {
       }
     } else {
       ruby {
-        code => "event.set('server_name_length', event.get('server_name').length)"
+        code => "event['server_name_length'] = event['server_name'].length;"
       }
     }
     if [certificate_chain_fuids] == "-" {
@@ -88,7 +88,7 @@ filter {
       }
     } else {
       ruby {
-        code => "event.set('certificate_chain_count', event.get('certificate_chain_fuids').count(',') + 1)"
+        code => "event['certificate_chain_count'] = event['certificate_chain_fuids'].count(',') + 1;"
       }
       mutate {
         convert => [ "certificate_chain_length", "integer" ]
@@ -134,5 +134,8 @@ filter {
         remove_field => [ "validation_status" ]
       }
     }
+	mutate {
+		#add_tag => [ "conf_file_1116"]
+	}
   }	
 }
