--- a/configfiles/1124_preprocess_bro_intel.conf
+++ b/configfiles/1124_preprocess_bro_intel.conf
@@ -1,14 +1,14 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 11/16/2017
+# Last Update: 12/9/2016
 #
 # This conf file is based on accepting logs for intel.log from Bro systems
 filter {
-  if [event_type] == "bro_intel" {
+  if [type] == "bro_intel" {
     # This is the initial parsing of the log
     csv {
-      columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","fuid","mime_type","file_description","indicator","indicator_event_type","seen_where","seen_node","sources"]
+      columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","fuid","mimetype","file_description","indicator","indicator_type","seen_where","seen_node","sources"]
       separator => "	"
     }
 	mutate {
