--- a/configfiles-setup_required/8502_postprocess_freq_analysis_bro_dns.conf
+++ b/configfiles-setup_required/8502_postprocess_freq_analysis_bro_dns.conf
@@ -4,7 +4,7 @@
 # Last Update: 4/11/2017
 
 filter {
-  if [type] == "dns" {
+  if [event_type] == "bro_dns" {
     # If Query exists run a frequency analysis against it.  In order for this to work you must have
     # freq.py and the corresponding frequency table in /opt/freq/.  This is a huge boost to security
     # and I highly recommend you set this up.  Example, if a frequency score less than 6 exists
@@ -12,7 +12,7 @@ filter {
     #
     # For higher accuracy, please generate your own frequency tables.  For questions on setup,
     # please refer to https://github.com/SMAPPER
-    if [query_type_name] == "A" or [query_type_name] == "AAAA" and "top-1m" not in [tags] {
+    if [query_type_name] == "A" or [query_type_name] == "AAAA" and "top-1m" not in [tags] and "internal_domain" not in [tags] {
       if [parent_domain] and [parent_domain_length] > 5 {
         mutate {
           add_field => { "freq_parent_domain" => "%{parent_domain}"}
@@ -64,8 +64,5 @@ filter {
         }
       }
     }
-	mutate {
-	  #add_tag => [ "conf_file_8502"]
-	}
   }
 }
