--- a/configfiles/1006_preprocess_beats.conf
+++ b/configfiles/1006_preprocess_beats.conf
@@ -21,6 +21,11 @@ filter {
       add_tag => "suricata"
     }
   }
+  if [@metadata][beat] == "winlogbeat" {
+    mutate {
+      add_tag => [ "windows_log" ]
+    }
+  }
   mutate {
     replace => { "type" => "doc" }
   }
