--- a/configfiles/6000_bro.conf
+++ b/configfiles/6000_bro.conf
@@ -6,6 +6,9 @@
 # This conf file is based on accepting logs for conn.log from Bro systems
 filter {
   if "bro" in [tags] {
+    date {
+      match => [ "timestamp", "UNIX" ]
+    }
     if [duration] == "-" {
       mutate {
         replace => [ "duration", "0" ]
@@ -55,6 +58,11 @@ filter {
         remove_field => ["virtual_host"]
       }
     }
+    if [user] == "-" {
+      mutate {
+        remove_field => ["user"]
+      }
+    }
 
     # I renamed conn_uids to uid so that it is easy to pivot to all things tied to a connection
     mutate {
@@ -91,7 +99,6 @@ filter {
       convert => [ "data_channel_destination_port", "integer" ]
       convert => [ "destination_port", "integer" ]
       convert => [ "depth", "integer" ]
-      convert => [ "duration", "float" ]
       convert => [ "info_code", "integer" ]
       convert => [ "missed_bytes", "integer" ]
       convert => [ "missing_bytes", "integer" ]
@@ -125,12 +132,9 @@ filter {
     if [original_bytes] {
       if [respond_bytes] {
         ruby {
-          code => "event['total_bytes'] = event['original_bytes'] + event['respond_bytes']"
+          code => "event.set('total_bytes',event.get('original_bytes') + event.get('respond_bytes'))"
         }
       }
     }
-	mutate {
-		#add_tag => [ "conf_file_6000"]
-	}
   }
 }
