--- a/configfiles/6300_windows.conf
+++ b/configfiles/6300_windows.conf
@@ -1,65 +1,16 @@
 # Author: Justin Henderson
-#         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
+# SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 11/19/2017
 
 filter {
-  if [type] == "windows" {
-#    json {
-#      source => "message"
-#    }
-    date {
-      match => ["EventTime", "YYYY-MM-dd HH:mm:ss"]
-      remove_field => [ "EventTime" ]
-    }
-    if [Application] {
-      grok {
-        match => { "Application" => "\\device\\harddiskvolume%{INT}\\%{GREEDYDATA:ApplicationPath}" }
-      }
-      if [ApplicationPath] {
-        mutate {
-          add_field => { "ApplicationPathIgnoringx86" => "%{ApplicationPath}" }
-        }
-        mutate {
-          gsub => [ "ApplicationPathIgnoringx86", "program files (x86)", "program files" ]
-        }
+  if "windows_log" in [tags] {
+    if "nxlog" in [tags] {
+      date {
+        match => ["EventTime", "YYYY-MM-dd HH:mm:ss"]
+        remove_field => [ "EventTime" ]
       }
     }
-    if [EventID] == 4634 {
-      mutate {
-        add_tag => [ "logoff" ]
-      }
-    }
-    if [EventID] == 4624 or [EventID] == 528 or [EventID] == 540 or [EventID] == 552 or [EventID] == 682 or [EventID] == 4648 or [EventID] == 4778 {
-      mutate {
-        add_tag => [ "logon" ]
-        add_tag => [ "alert_data" ]
-      }
-    }
-    if [EventID] == 529 or [EventID] == 4625 or [EventID] == 530 or [EventID] == 531 or [EventID] == 532 or [EventID] == 533 or [EventID] == 534 or [EventID] == 535 or [EventID] == 536 or [EventID] == 536 or [EventID] == 537 or [EventID] == 538 or [EventID] == 539 or [EventID] == 4625 or [EventID] == 4771 {
-      mutate {
-        add_tag => [ "logon_failure" ]
-        add_tag => [ "alert_data" ]
-      }
-    }
-    # Criticl event IDs to monitor
-    if [EventID] == 7030 or [EventID] == 4720 or [EventID] == 4722 or [EventID] == 4724 or [EventID] == 4738 or [EventID] == 4732 or [EventID] == 1102 or [EventID] == 1056 or [EventID] == 2003 or [EventID] == 2005 or [EventID] == 8003 or [EventID] == 8004 or [EventID] == 8006 or [EventID] == 8007 {
-      mutate {
-        add_tag => [ "alert_data" ]
-      }
-    }
-    if [CommandLine] {
-      ruby {
-        code => "event.set('command_line_length', event.get('CommandLine').length)"
-      }
-      grok {
-        match => { "CommandLine" => "(?<possible_base64_code>[A-Za-z0-9+/]{50,}[=]{0,2})" }
-        tag_on_failure => []
-      }
-    }
-    # Ignore broadcasts received by Sysmon
-    if [EventID] == 3 and [SourceIp] =~ "255$" { drop {} }
-    if [EventID] == 3 and [DestinationIp] =~ "255$" { drop {} }
 
     mutate {
       rename => [ "AccountName", "user" ]
@@ -68,12 +19,12 @@ filter {
       rename => [ "Category", "category" ]
       rename => [ "ClientAddress", "client_ip" ]
       rename => [ "Channel", "channel" ]
-      rename => [ "CommandLine", "command_line" ]
+      rename => [ "command_line", "command_line" ]
       rename => [ "DCIPAddress", "domain_controller_ip" ]
       rename => [ "DCName", "domain_controller_name" ]
       rename => [ "DestAddress", "destination_ip" ]
+      rename => [ "DestinationIp", "windows_destination_ip"]
       rename => [ "DestPort", "destination_port" ]
-      rename => [ "EventID", "event_id" ]
       rename => [ "EventReceivedTime", "event_received_time" ]
       rename => [ "EventType", "event_type" ]
       rename => [ "GatewayIPAddress", "gateway_ip" ]
@@ -92,6 +43,7 @@ filter {
       rename => [ "ServiceID", "service_id" ]
       rename => [ "SeverityValue", "severity_value" ]
       rename => [ "SourceAddress", "source_ip" ]
+      rename => [ "SourceIP", "windows_source_ip" ]
       rename => [ "SourcePort", "source_port" ]
       rename => [ "SourceModuleName", "source_module_name" ]
       rename => [ "SourceModuleType", "source_module_type" ]
@@ -101,15 +53,104 @@ filter {
       rename => [ "TargetDomainName", "target_domain_name" ]
       rename => [ "TargetUserName", "user" ]
       rename => [ "ThreadID", "thread_id" ]
-      rename => [ "User_ID", "user" ]
-      rename => [ "UserID", "user" ]
-      rename => [ "username", "user" ]
+      rename => [ "[event_data][CommandLine]", "command_line" ]
+      rename => [ "[event_date][ContextInfo]", "context_info" ]
+      rename => [ "[event_data][CurrentDirectory]", "current_directory" ]
+      rename => [ "[event_data][DestAddress]", "destination_ip" ]
+      rename => [ "[event_data][DestPort]", "destination_port" ]
+      rename => [ "[event_data][Hashes]", "hashes" ]
+      rename => [ "[event_data][Image]", "image" ]
+      rename => [ "[event_data][IntegrityLevel]", "integrity_level" ]
+      rename => [ "[event_data][ParentCommandLine]", "parent_command_line" ]
+      rename => [ "[event_data][ParentImage]", "parent_image" ]
+      rename => [ "[event_data][Payload]", "payload" ]
+      rename => [ "[event_data][SourceAddress]", "source_ip" ]
+      rename => [ "[event_data][SourcePort]", "source_port" ]
+      rename => [ "[event_data][ScriptBlockText]", "script_block_text" ]
+      rename => [ "[event_data][TargetUserName]", "user"]
+      rename => [ "[event_data][user][name]", "user"]
+      rename => [ "[event_data][user][identifier]", "user_sid"]
+      rename => [ "[event_data][user][type]", "user_type"]
+      rename => [ "[event_data][user][domain]", "user_domain"]
+      rename => [ "[user][name]", "user"]
+      rename => [ "[user][identifier]", "user_sid"]
+      rename => [ "[user][type]", "user_type"]
+      rename => [ "[user][domain]", "user_domain"]
     }
     mutate {
       convert => [ "command_line_length", "integer" ]
       convert => [ "destination_port", "integer" ]
       convert => [ "source_port", "integer" ]
+      convert => [ "user", "string" ]
     }
+    if [user] == "-" {
+      mutate { remove_field => [ "user" ] }
+    }
+    if [user] {
+      ruby {
+        code => 'case event.get("[user]")
+                   when Hash
+                     event.tag("empty_user")
+                   when Array
+                     event.tag("empty_user")
+                   end'
+      }
+    }
+    if "empty_user" in [tags] {
+      mutate { remove_field => [ "user" ] }
+    }
+    if [source_ip] == "-" {
+      mutate { remove_field => [ "source_ip" ] }
+    }
+    if [Application] {
+      grok {
+        match => { "Application" => "\\device\\harddiskvolume%{INT}\\%{GREEDYDATA:ApplicationPath}" }
+      }
+      if [ApplicationPath] {
+        mutate {
+          add_field => { "ApplicationPathIgnoringx86" => "%{ApplicationPath}" }
+        }
+        mutate {
+          gsub => [ "ApplicationPathIgnoringx86", "program files (x86)", "program files" ]
+        }
+      }
+    }
+    if [event_id] == 4634 {
+      mutate {
+        add_tag => [ "logoff" ]
+      }
+    }
+    if [event_id] == 4624 or [event_id] == 528 or [event_id] == 540 or [event_id] == 552 or [event_id] == 682 or [event_id] == 4648 or [event_id] == 4778 {
+      mutate {
+        add_tag => [ "logon" ]
+        add_tag => [ "alert_data" ]
+      }
+    }
+    if [event_id] == 529 or [event_id] == 4625 or [event_id] == 530 or [event_id] == 531 or [event_id] == 532 or [event_id] == 533 or [event_id] == 534 or [event_id] == 535 or [event_id] == 536 or [event_id] == 536 or [event_id] == 537 or [event_id] == 538 or [event_id] == 539 or [event_id] == 4625 or [event_id] == 4771 {
+      mutate {
+        add_tag => [ "logon_failure" ]
+        add_tag => [ "alert_data" ]
+      }
+    }
+    # Criticl event IDs to monitor
+    if [event_id] == 7030 or [event_id] == 4720 or [event_id] == 4722 or [event_id] == 4724 or [event_id] == 4738 or [event_id] == 4732 or [event_id] == 1102 or [event_id] == 1056 or [event_id] == 2003 or [event_id] == 2005 or [event_id] == 8003 or [event_id] == 8004 or [event_id] == 8006 or [event_id] == 8007 {
+      mutate {
+        add_tag => [ "alert_data" ]
+      }
+    }
+    if [command_line] {
+      ruby {
+        code => "event.set('command_line_length', event.get('command_line').length)"
+      }
+      grok {
+        match => { "command_line" => "(?<possible_base64_code>[A-Za-z0-9+/]{50,}[=]{0,2})" }
+        tag_on_failure => []
+      }
+    }
+    # Ignore broadcasts received by Sysmon
+    if [event_id] == 3 and [SourceIp] =~ "255$" { drop {} }
+    if [event_id] == 3 and [DestinationIp] =~ "255$" { drop {} }
+
     if [source_name] == "Microsoft-Windows-AppLocker" {
       #grok {
       #  match => { "UserData" => "%{DATA}>%{DATA:xml}</RuleAndFileData>" }
@@ -178,7 +219,7 @@ filter {
     }
     if [event_id] == 4103 and [source_name] == "Microsoft-Windows-PowerShell" {
       grok {
-        match => { "ContextInfo" => "\s+Severity = %{DATA:severity}\s+Host Name = %{DATA:shell_host_name}\s+Host Version = %{DATA:shell_host_version}\s+Host ID = %{DATA:shell_host_id}\s+Host Application = %{DATA:shell_host_application}\s+Engine Version = %{DATA:shell_engine_version}\s+Runspace ID = %{DATA:runspace_id}\s+Pipeline ID = %{INT:pipeline_id}\s+Command Name = %{DATA:command_name}\s+Command Type = %{DATA:command_type}\s+Script Name = %{DATA:Path}\s+Command Path = %{DATA:command_path}\s+Sequence Number = %{INT:sequence_number}\s+User = %{DATA:shell_user}\s+Connected User = %{DATA:connected_user}\s+Shell ID = %{GREEDYDATA:shell_id}" }
+        match => { "context_info" => "\s+Severity = %{DATA:severity}\s+Host Name = %{DATA:shell_host_name}\s+Host Version = %{DATA:shell_host_version}\s+Host ID = %{DATA:shell_host_id}\s+Host Application = %{DATA:shell_host_application}\s+Engine Version = %{DATA:shell_engine_version}\s+Runspace ID = %{DATA:runspace_id}\s+Pipeline ID = %{INT:pipeline_id}\s+Command Name = %{DATA:command_name}\s+Command Type = %{DATA:command_type}\s+Script Name = %{DATA:Path}\s+Command Path = %{DATA:command_path}\s+Sequence Number = %{INT:sequence_number}\s+User = %{DATA:shell_user}\s+Connected User = %{DATA:connected_user}\s+Shell ID = %{GREEDYDATA:shell_id}" }
       }
       if [shell_host_application] {
         grok {
@@ -193,13 +234,13 @@ filter {
         }
       }
     }
-    if [event_id] == 4104 and [ScriptBlockText] and [source_name] == "Microsoft-Windows-PowerShell" {
+    if [event_id] == 4104 and [script_block_text] and [source_name] == "Microsoft-Windows-PowerShell" {
       grok {
-          match => { "ScriptBlockText" => "(?<possible_base64_code>[A-Za-z0-9+/]{50,}[=]{0,2})" }
+          match => { "script_block_text" => "(?<possible_base64_code>[A-Za-z0-9+/]{50,}[=]{0,2})" }
           tag_on_failure => []
         }
         ruby {
-          code => "event.set('script_block_text_length', event.get('ScriptBlockText').length)"
+          code => "event.set('script_block_text_length', event.get('script_block_text').length)"
         }
         mutate {
           convert => [ "script_block_text_length", "integer" ]
@@ -218,17 +259,11 @@ filter {
                  #  event.set('iex','true')
                  #end;"
       }
-      #ruby {
-      #  code => "a = event.get('possible_base64_code'); decode = `echo #{a} | base64 -d`; output = `if [[ #{decode} == *iex* ]]; then echo true; fi`; event.set('iex', output); "
-      #}
     }
-    if [Payload] and [event_id] == 4103 and [source_name] == "Microsoft-Windows-PowerShell" {
+    if [payload] and [event_id] == 4103 and [source_name] == "Microsoft-Windows-PowerShell" {
       ruby {
-        code => "event.set('cmdlets', event.get('Payload').downcase.scan(/commandinvocation\(([a-z0-9-]+)\)/))"
+        code => "event.set('cmdlets', event.get('payload').downcase.scan(/commandinvocation\(([a-z0-9-]+)\)/))"
       }
-      #grok {
-      #  match => { "Payload" => ""}
-      #}
     }
     if [command_line] {
       if [command_line] =~ "iex" or [command_line] =~ "Invoke-Expression" {
@@ -242,13 +277,13 @@ filter {
         }
       }
     }
-    if [ScriptBlockText] {
-      if [ScriptBlockText] =~ "iex" or [ScriptBlockText] =~ "Invoke-Expression" {
+    if [script_block_text] {
+      if [script_block_text] =~ "iex" or [script_block_text] =~ "Invoke-Expression" {
         mutate {
           add_tag => [ "ps_iex" ]
         }
       }
-      if [ScriptBlockText] =~ "New-Object" and [ScriptBlockText] =~ "Net.WebClient" {
+      if [script_block_text] =~ "New-Object" and [script_block_text] =~ "Net.WebClient" {
         mutate {
           add_tag => [ "ps_webclient" ]
         }
@@ -306,13 +341,6 @@ filter {
     if [user] =~ "^DWM-*" or [user] == "SYSTEM" or [user] == "NETWORK SERVICE" or [user] == "LOCAL SERVICE" or [user] =~ "^SVC_*" {
       mutate {
         add_tag => [ "service_account" ]
-      }
-    }
-    # This looks for events that are typically noisy but may be of use for deep dive investigations
-    # A tag of noise is added to quickly filter out noise
-    if [event_id] == 7036 or [source_name] == "Desktop Window Manager" or [category] == "Engine Lifecycle" or [category] == "Provider Lifecycle" {
-      mutate {
-        add_tag => [ "noise" ]
       }
     }
     #Identify machine accounts
