--- a/configfiles/6400_suricata.conf
+++ b/configfiles/6400_suricata.conf
@@ -14,11 +14,6 @@ filter {
         remove_field => [ "timestamp" ]
       }
     }
-    if [event_type] == "fileinfo" {
-      #ruby {
-      #  code => "if event.get('event_type') == 'fileinfo'; event.set('[fileinfo][type]',event.get('[fileinfo][magic]).to_s.split(',')[0]); end;" 
-      #}
-    }
 	# I recommend renaming the fields below to be consistent with other log sources.  This makes it easy to "pivot" between logs
     mutate {
       rename => [ "src_ip", "source_ip" ]
@@ -132,6 +127,18 @@ filter {
           add_field => { "severity_level" => "Low" }
         }
       }
+      mutate {
+        gsub => [ "sid", "\D", "" ]
+        convert => [ "sid", "integer" ]
+        convert => [ "gid", "integer" ]
+      }
+       # This extracts the signatures rule by looking up the rule by sid number on disk.
+       if [gid] == 1 and [sid] > 0 and [sid] < 1000000000 {
+         ruby {
+           code => "sid = event.get('sid'); event.set('rule', `grep -h sid:#{sid} /etc/nsm/rules/*.rules`)"
+         }
+       }
+
 	  # If the alert is a Snort GPL alert break it apart for easier reading and categorization
       if [signature] =~ "GPL " {
 	    # This will parse out the category type from the alert
@@ -185,13 +192,6 @@ filter {
           add_field => [ "signature_info", "http://doc.emergingthreats.net/%{sid}" ]
         }
       }
-    }
-  }
-  if "suricata" in [tags] {
-    if "_grokparsefailure" not in [tags] and "_csvparsefailure" not in [tags] and "_jsonparsefailure" not in [tags] {
-    #  mutate {
-    #    remove_field => [ "message" ]
-    #  }
     }
   }
 }
