--- a/configfiles/8006_postprocess_dns.conf
+++ b/configfiles/8006_postprocess_dns.conf
@@ -4,18 +4,20 @@
 # Last Update: 12/9/2016
 
 filter {
-  if [type] == "bro_dns" {
-    mutate {
-      replace => { "type" => "dns" }
-    }
-  }
-  if [type] == "dns" {
+  if [event_type] == "bro_dns" {
     # Used for whois lookups - can create log loop
     if [query] =~ "^whois\." {
       drop { }
     }
+    if [query] =~ "labmeinc\.internal$" {
+      mutate {
+        add_tag => "internal_domain"
+        add_field => { "highest_registered_domain" => "labmeinc.internal" }
+      }
+    }
+
     # REPLACE test.int with your internal domain
-    if [query] and [query] !~ "\.test\.int$" {
+    if "internal_domain" not in [tags] {
       mutate {
         lowercase => [ "query" ]
       }
@@ -24,7 +26,7 @@ filter {
           source => "query"
         }
         ruby {
-          code => "event['query_length'] = event['query'].length"
+          code => "event.set('query_length', event.get('query').length)"
         }
         mutate {
           rename => { "[SubLog][sessionid]" => "sub_session_id" }
@@ -35,18 +37,15 @@ filter {
         }
         if [parent_domain] {
           ruby {
-            code => "event['parent_domain_length'] = event['parent_domain'].length"
+            code => "event.set('parent_domain_length', event.get('parent_domain').length)"
           }
         }
         if [subdomain] {
           ruby {
-            code => "event['subdomain_length'] = event['subdomain'].length"
+            code => "event.set('subdomain_length', event.get('subdomain').length)"
           }
         }
       }
     }
-	mutate {
-		#add_tag => [ "conf_file_8006"]
-	}
   }
 }
