--- a/configfiles/8200_postprocess_tagging.conf
+++ b/configfiles/8200_postprocess_tagging.conf
@@ -9,6 +9,11 @@ filter {
       add_tag => [ "broadcast" ]
     }
   }
+  if [destination_ip] =~ "\.255$" {
+    mutate {
+      add_tag => [ "possible_broadcast" ]
+    }
+  }
   if [destination_ip] and "multicast" not in [tags] and "broadcast" not in [tags] {
     if [destination_ip] =~ "^10\." or [destination_ip] =~ "192\.168\." or [destination_ip] =~ "172\.(1[6-9]|2[0-9]|3[0-1])\." {
       mutate {
