--- a/configfiles-setup_required/8503_postprocess_freq_analysis_bro_http.conf
+++ b/configfiles-setup_required/8503_postprocess_freq_analysis_bro_http.conf
@@ -4,7 +4,7 @@
 # Last Update: 12/9/2016
 
 filter {
-  if [type] == "bro_http" {
+  if [event_type] == "bro_http" {
     # If uri exists run a frequency analysis against it.  In order for this to work you must have
     # freq.py and the corresponding frequency table in /opt/freq/.  This is a huge boost to security
     # and I highly recommend you set this up.  Example, if a frequency score less than 6 exists
@@ -13,7 +13,7 @@ filter {
     # For higher accuracy, please generate your own frequency tables.  For questions on setup,
     # please refer to https://github.com/SMAPPER
     if [virtual_host]{
-      if [sub_domain] and [sub_domain_length] > 5 {
+      if [virtual_host_length] > 5 {
         mutate {
           add_field => { "freq_virtual_host" => "%{virtual_host}" }
         }
@@ -25,6 +25,7 @@ filter {
             url => "http://localhost:10002/measure/%{freq_virtual_host}"
           }
           sprintf => true
+          json => false
           target => "virtual_host_frequency_score"
         }
         mutate {
@@ -38,8 +39,5 @@ filter {
         }
       }
     }
-	mutate {
-	  #add_tag => [ "conf_file_8503"]
-	}
   }
 }
