--- a/configfiles-setup_required/8504_postprocess_freq_analysis_bro_ssl.conf
+++ b/configfiles-setup_required/8504_postprocess_freq_analysis_bro_ssl.conf
@@ -4,7 +4,7 @@
 # Last Update: 12/9/2016
 
 filter {
-  if [type] == "bro_ssl" {
+  if [event_type] == "bro_ssl" {
     # If CHANGE_ME exists run a frequency analysis against it.  In order for this to work you must have
     # freq.py and the corresponding frequency table in /opt/freq/.  This is a huge boost to security
     # and I highly recommend you set this up.  Example, if a frequency score less than 6 exists
@@ -12,7 +12,7 @@ filter {
     #
     # For higher accuracy, please generate your own frequency tables.  For questions on setup,
     # please refer to https://github.com/SMAPPER
-    if [server_name] {
+    if [server_name] and [server_name] != "" {
       mutate {
         add_field => { "freq_common_name" => "%{server_name}" }
       }
@@ -24,6 +24,7 @@ filter {
           url => "http://localhost:10004/measure/%{freq_common_name}"
         }
         sprintf => true
+        json => false
         target => "server_name_frequency_score"
       }
       mutate {
@@ -36,7 +37,7 @@ filter {
         }
       }
     }
-    if [issuer_common_name] {
+    if [issuer_common_name] and [issuer_common_name] != "" {
       mutate {
         add_field => { "freq_common_name" => "%{issuer_common_name}" }
       }
@@ -48,6 +49,7 @@ filter {
           url => "http://localhost:10004/measure/%{freq_common_name}"
         }
         sprintf => true
+        json => false
         target => "issuer_common_name_frequency_score"
       }
       mutate {
@@ -60,7 +62,7 @@ filter {
         }
       }
     }
-    if [certificate_common_name] {
+    if [certificate_common_name] and [certificate_common_name] != "" {
       mutate {
         add_field => { "freq_common_name" => "%{certificate_common_name}" }
       }
@@ -72,6 +74,7 @@ filter {
           url => "http://localhost:10004/measure/%{freq_common_name}"
         }
         sprintf => true
+        json => false
         target => "certificate_common_name_frequency_score"
       }
       mutate {
@@ -84,8 +87,5 @@ filter {
         }
       }
     }
-	mutate {
-	  #add_tag => [ "conf_file_8504"]
-	}
   }	
 }
