--- a/configfiles/1000_preprocess_log_elapsed.conf
+++ b/configfiles/1000_preprocess_log_elapsed.conf
@@ -1,18 +1,12 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 12/9/2016
+# Last Update: 10/10/2017
+#
+# Requires Logstash version 5.x
 
-input {
-  udp {
-    port => 1514
-    tags => "syslog"
-  }
-}
 filter {
-  if "syslog" in [tags] {
-    mutate {
-		#add_tag => [ "conf_file_0003"]
-	}
+  ruby {
+    code => "event.set('task_start',Time.now.to_f)"
   }
 }
