--- a/configfiles/1116_preprocess_bro_ssl.conf
+++ b/configfiles/1116_preprocess_bro_ssl.conf
@@ -8,7 +8,7 @@ filter {
   if [event_type] == "bro_ssl" {
    # This is the initial parsing of the log
     csv {
-      columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","version","cipher","curve","server_name","resumed","last_alert","next_protocol","established","certificate_chain_fuids","client_certificate_chain_fuids","certificate_subject","certificate_issuer","client_subject","client_issuer","validation_status"]
+      columns => ["timestamp","uid","source_ip","source_port","destination_ip","destination_port","ssl_version","cipher","curve","server_name","resumed","last_alert","next_protocol","established","certificate_chain_fuids","client_certificate_chain_fuids","certificate_subject","certificate_issuer","client_subject","client_issuer","validation_status"]
       separator => "	"
     }
     mutate {
