--- a/configfiles/8001_postprocess_common_ip_augmentation.conf
+++ b/configfiles/8001_postprocess_common_ip_augmentation.conf
@@ -16,19 +16,17 @@ filter {
       tag_on_failure => []
     }
     geoip {
-      database => "/usr/local/share/GeoIP/GeoLiteCity.dat"
-      source => "[source_ip]"
+      source => "source_ip"
       target => "source_geo"
     }
     geoip {
-      database => "/usr/local/share/GeoIP/GeoIPASNum.dat"
-      source => "[source_ip]"
+      default_database_type => "ASN"
+      source => "source_ip"
       target => "source_geo"
     }
     if [source_ip] {
       mutate {
         add_field => { "ips" => "%{source_ip}" }
-        add_field => { "source_ips" => [ "%{source_ip}" ] }
       }
     }
   }
@@ -44,19 +42,18 @@ filter {
       tag_on_failure => []
     }
     geoip {
-      database => "/usr/local/share/GeoIP/GeoLiteCity.dat"
-      source => "[destination_ip]"
+      source => "destination_ip"
       target => "destination_geo"
     }
     geoip {
-      database => "/usr/local/share/GeoIP/GeoIPASNum.dat"
-      source => "[destination_ip]"
+      default_database_type => "ASN"
+      source => "destination_ip"
       target => "destination_geo"
     }
-  }
-  if [source_ip] or [destination_ip] {
-    mutate {
-	  #add_tag => [ "conf_file_8001"]
-	}
+    if [destination_ip] {
+      mutate {
+        add_field => { "ips" => "%{destination_ip}" }
+      }
+    }
   }
 }
