--- a/configfiles/8007_postprocess_http.conf
+++ b/configfiles/8007_postprocess_http.conf
@@ -4,24 +4,21 @@
 # Last Update: 12/9/2016
 
 filter {
-  if [type] == "bro_http" {
+  if [event_type] == "bro_http" {
     if [uri] {
       ruby {
-        code => "event['uri_length'] = event['uri'].length"
+        code => "event.set('uri_length', event.get('uri').length)"
       }
     }
     if [virtual_host] {
       ruby {
-        code => "event['virtual_host_length'] = event['virtual_host'].length"
+        code => "event.set('virtual_host_length', event.get('virtual_host').length)"
       }
     }
     if [user_agent] {
       ruby {
-        code => "event['useragent_length'] = event['useragent_host'].length"
+        code => "event.set('useragent_length', event.get('useragent_host').length)"
       }
     }
-	mutate {
-	  ##add_tag => [ "conf_file_8007"]
-	}
   }
 }
