--- a/configfiles/9000_output.conf
+++ b/configfiles/9000_output.conf
@@ -1,13 +1,13 @@
 # Author: Justin Henderson
 # SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
 # Email: justin@hasecuritysolutions.com
-# Last Update: 11/15/2017
+# Last Update: 11/16/2017
 
 output {
-  if [beat] {
-    #stdout { codec => rubydebug }
+  #if [highest_registered_domain] {
+  #  stdout { codec => rubydebug }
+  #}
     elasticsearch {
-      index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}" 
+      index => "logstash-level-two"
     }
-  }
 }
