--- a/configfiles/8001_postprocess_common_ip_augmentation.conf
+++ b/configfiles/8001_postprocess_common_ip_augmentation.conf
@@ -1,6 +1,6 @@
 # Author: Justin Henderson
 #         SANS Instructor and author of SANS SEC555: SIEM and Tactical Analytics
-# Email: justin@hasecuritysolutions.com
+# Email: justin@hasecuritysolution.com
 # Last Update: 12/9/2016
 
 filter {
@@ -15,19 +15,20 @@ filter {
       remove_field => [ "source_ip" ]
       tag_on_failure => []
     }
-    geoip {
-      source => "source_ip"
-      target => "source_geo"
-    }
-    geoip {
-      default_database_type => "ASN"
-      source => "source_ip"
-      target => "source_geo"
-    }
-    if [source_ip] {
-      mutate {
-        add_field => { "ips" => "%{source_ip}" }
+    if "internal_source" not in [tags] {
+      geoip {
+        source => "[source_ip]"
+        target => "source_geo"
       }
+      geoip {
+        default_database_type => "ASN"
+        source => "[source_ip]"
+        target => "source_geo"
+        #database => "<path to DB>"
+      }
+    }
+    mutate {
+      add_field => { "ips" => "%{source_ip}" }
     }
   }
   if [destination_ip] {
@@ -41,19 +42,19 @@ filter {
       remove_field => [ "destination_ip" ]
       tag_on_failure => []
     }
-    geoip {
-      source => "destination_ip"
-      target => "destination_geo"
-    }
-    geoip {
-      default_database_type => "ASN"
-      source => "destination_ip"
-      target => "destination_geo"
-    }
-    if [destination_ip] {
-      mutate {
-        add_field => { "ips" => "%{destination_ip}" }
+    if "internal_destination" not in [tags] {
+      geoip {
+        source => "[destination_ip]"
+        target => "destination_geo"
       }
+      geoip {
+        default_database_type => "ASN"
+        source => "[destination_ip]"
+        target => "destination_geo"
+      }
+    }
+    mutate {
+      add_field => { "ips" => "%{destination_ip}" }
     }
   }
 }
