session_id appears to be a typo added some new fields we've seen with our fortigate

--- a/configfiles/6200_firewall_fortinet.conf
+++ b/configfiles/6200_firewall_fortinet.conf
@@ -72,6 +72,7 @@ filter {
       rename => {  "disklograte" => "disk_lograte" }
       rename => {  "dstcountry" => "destination_country" }
       rename => {  "dstintf" => "destination_interface" }
+      rename => {  "dstintfrole" => "destination_interface_role" }
       rename => {  "dstip" => "destination_ip" }
       rename => {  "dstport" => "destination_port" }
       rename => {  "duration" => "elapsed_time" }
@@ -85,11 +86,13 @@ filter {
       rename => {  "filesize" => "file_size" }
       rename => {  "filetype" => "file_type" }
       rename => {  "hostname" => "hostname" }
+      rename => {  "incidentserialno" => "incident_serial_number" }
       rename => {  "ip" => "source_ip" }
       rename => {  "localip" => "source_ip" }
       rename => {  "locip" => "local_ip" }
       rename => {  "locport" => "source_port" }
       rename => {  "logid" => "log_id" }
+      rename => {  "logtime" => "log_time" }
       rename => {  "logver" => "log_version" }
       rename => {  "manuf" => "manufacturer" }
       rename => {  "mem" => "memory" }
@@ -121,7 +124,7 @@ filter {
       rename => {  "sent" => "bytes_sent" }
       rename => {  "sentbyte" => "bytes_sent" }
       rename => {  "sentpkt" => "packets_sent" }
-      rename => {  "session_id" => "session_id" }
+      rename => {  "sessionid" => "session_id" }
       rename => {  "setuprate" => "setup_rate" }
       rename => {  "sn" => "serial" }
       rename => {  "snclosest" => "serial_closest_access_point" }
@@ -132,6 +135,7 @@ filter {
       rename => {  "srcmac" => "source_mac" }
       rename => {  "srcname" => "source_name" }
       rename => {  "srcintf" => "source_interface" }
+	  rename => {  "srcintfrole" => "source_interface_role" }
       rename => {  "srcport" => "source_port" }
       rename => {  "stacount" => "station_count" }
       rename => {  "stamac" => "static_mac" }
