--- a/configfiles/6200_firewall_fortinet.conf
+++ b/configfiles/6200_firewall_fortinet.conf
@@ -41,12 +41,14 @@ filter {
       rename => {  "ap" => "access_point" }
       rename => {  "app" => "application" }
       rename => {  "appcat" => "application_category" }
+      rename => {  "appid" => "application_id" }
       rename => {  "applist" => "application_list" }
       rename => {  "apprisk" => "application_risk" }
       rename => {  "approfile" => "accessPoint_profile" }
       rename => {  "apscan" => "access_point_scan" }
       rename => {  "apstatus" => "acces_point_status" }
       rename => {  "aptype" => "access_point_type" }
+	  rename => {  "attackid" => "attack_id" }
       rename => {  "authproto" => "authentication_protocol" }
       rename => {  "bandwidth" => "bandwidth" }
       rename => {  "banned_src" => "banned_source" }
@@ -105,6 +107,8 @@ filter {
       rename => {  "outintf" => "outbound_interface" }
       rename => {  "peer_notif" => "peer_notification" }
       rename => {  "phase2_name" => "phase2_name" }
+	  rename => {  "poolname" => "pool_name" }
+	  rename => {  "poluuid" => "policy_uuid" }
       rename => {  "policyid" => "policy_id" }
       rename => {  "policytype" => "policy_type" }
       rename => {  "port" => "port" }
@@ -120,12 +124,16 @@ filter {
       rename => {  "remport" => "remote_port" }
       rename => {  "reqtype" => "request_type" }
       rename => {  "scantime" => "scan_time" }
+      rename => {  "scertcname" => "certificate_common_name" }
+      rename => {  "scertissuer" => "certificate_issuer" }
       rename => {  "securitymode" => "security_mode" }
       rename => {  "sent" => "bytes_sent" }
       rename => {  "sentbyte" => "bytes_sent" }
       rename => {  "sentpkt" => "packets_sent" }
       rename => {  "sessionid" => "session_id" }
       rename => {  "setuprate" => "setup_rate" }
+      rename => {  "shaperperipdropbyte" => "shaper_per_ip_drop_byte" }
+      rename => {  "shaperperipname" => "shaper_per_ip_name" }	  
       rename => {  "sn" => "serial" }
       rename => {  "snclosest" => "serial_closest_access_point" }
       rename => {  "sndetected" => "serial_access_point_that_detected_rogue_ap" }
@@ -146,6 +154,7 @@ filter {
       rename => {  "sn" => "serial" }
       rename => {  "srcintf" => "source_interface" }
       rename => {  "srcport" => "source_port" }
+	  rename => {  "sslaction" => "ssl_action" }
       rename => {  "total" => "total_bytes" }
       rename => {  "totalsession" => "total_sessions" }
       rename => {  "trandisp" => "nat_translation_type" }
@@ -158,6 +167,7 @@ filter {
       rename => {  "tunneltype" => "tunnel_type" }
       rename => {  "unauthuser" => "unauthenticated_user_source" }
       rename => {  "unauthusersource" => "os_version" }
+      rename => {  "utmaction" => "utm_action" }
       rename => {  "vendorurl" => "vendor_url" }
       rename => {  "vpntunnel" => "vpn_tunnel" }
       rename => {  "vulncat" => "vulnerability_category" }
